# Graph-ANN-Optimization

./: .gitignore  CMakeLists.txt  README.md  download_sift.py  search_results.txt
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: BENCHMARKS.md  PROGRESS.md  REPORT.md
include/: distance.h  io_utils.h  kmeans.h  vamana_index.h
src/: build_clusters.cpp  build_index.cpp  distance.cpp  io_utils.cpp  kmeans.cpp  refine_index.cpp  search_index.cpp  vamana_index.cpp
